--- a/LM_Decoding.ipynb
+++ b/LM_Decoding.ipynb
@@ -18,23 +18,7 @@
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_7055174513794b8a92bf00753cdc5249",
-              "IPY_MODEL_3a5073070fb244c189adbbf15975eaca",
-              "IPY_MODEL_67302b4b862c4d74a0eb43a291a744d9"
-            ],
-            "layout": "IPY_MODEL_0da808adbd874249b7e7f2cb95fc2a5f"
-          }
+          "state": {}
         },
         "7055174513794b8a92bf00753cdc5249": {
           "model_module": "@jupyter-widgets/controls",
